Update messages_zh.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -20,16 +20,13 @@ refresh = 刷新
 view.tiles = 磁贴
 view.table = 表格
 userMenu.logOut = 退出登入
-userMenu.showProfile = 用户资料
+userMenu.showProfile = 显示用户资料
 menu.feedback = 反馈
 menu.exit = 退出
 menu.settings = 设置
-# Fuzzy
 menu.revealMapFolder = 打开地图文件夹
-# Fuzzy
 menu.revealLogFolder = 打开日志文件夹
-# Fuzzy
-menu.revealModFolder = 打开修改文件夹
+menu.revealModFolder = 打开MOD文件夹
 main.community.news = 新闻
 main.chat = 聊天
 main.play = 游戏
@@ -53,7 +50,7 @@ coop.leaderboard.players = 玩家
 coop.leaderboard.names = 名字
 coop.leaderboard.secondary = 次要目标
 coop.leaderboard.time = 时间
-coop.leaderboard.replay = 重播
+coop.leaderboard.replay = 录像
 coop.leaderboard.allPlayers = 所有
 coop.leaderboard.singlePlayer = 一位玩家
 coop.leaderboard.numberOfPlayersFormat = {0,numbe﻿r,\#} 玩家
@@ -64,16 +61,16 @@ ranked1v1.play = 匹配游戏
 ranked1v1.cancel = 取消
 ranked1v1.choseFactions.title = 选择阵营
 ranked1v1.choseFactions.description = 当游戏开始时，你选择的阵营将被分配给你。
-ranked1v1.rating.title = 你的评分等级
+ranked1v1.rating.title = 你的评级
 ranked1v1.rankingDistribution = 评级分布
 ranked1v1.rankingDistribution.x = 评级
 ranked1v1.rankingDistribution.y = 玩家
-ranked1v1.ratingProgress.stillLearning = 该系统仍在学习你的技能。玩更多的游戏来完成进度。
-ranked1v1.ratingHint.low = 你的评分很低。请学习游戏基础知识。
-ranked1v1.ratingHint.moderate = 您的评分适中。继续学习游戏机制予以提高。
-ranked1v1.ratingHint.good = 你的评价很好。专注于细节改进。
-ranked1v1.ratingHint.high = 您的评价很高。为什么不帮助别人改进？
-ranked1v1.ratingHint.top = 恭喜！你是一名顶尖球员。分享你的经验。
+ranked1v1.ratingProgress.stillLearning = 该系统仍在评判你的技能。玩更多的游戏来完成进度。
+ranked1v1.ratingHint.low = 你的评级较低。请学习游戏基础知识。
+ranked1v1.ratingHint.moderate = 您的评级适中。继续学习游戏机制予以提高。
+ranked1v1.ratingHint.good = 你的评级很好。专注于细节的改进。
+ranked1v1.ratingHint.high = 您的评级很高。为什么不帮助别人改进？
+ranked1v1.ratingHint.top = 恭喜！你是一名顶级玩家。分享你的经验。
 ranked1v1.gamesPlayed = 玩过的游戏
 ranked1v1.ranking = 你的等级
 ranked1v1.rankingOutOf = 超出{0,number,\#}玩家
@@ -126,8 +123,8 @@ chat.filter.filter = 过滤
 chat.filter.prompt = 在频道中搜索
 chat.filter.clan = 战队
 chat.filter.username = 用户名
-chat.filter.minRating = 最低限度评级
-chat.filter.maxRating = 最高限度评级
+chat.filter.minRating = 评级下限
+chat.filter.maxRating = 评级上限
 chat.operator = 系统消息
 clan.clanName = 名称
 clan.description = 描述
@@ -138,7 +135,7 @@ clan.visitPage = 访问战队网站
 chat.privateMessage.playerLeft = {0}现在处于离线状态
 chat.privateMessage.playerReconnect = {0}重新上线
 chat.privateMessage.globalRating = 全球评级
-chat.privateMessage.ladder1v1Rating = 1v1等级
+chat.privateMessage.ladder1v1Rating = 1v1评级
 chat.privateMessage.ratingFormat = {0,number,\#}
 chat.privateMessage.gamesPlayed = 玩过的游戏
 chat.privateMessage.currentlyPlaying = 正在玩
@@ -146,9 +143,9 @@ chat.privateMessage.game.players = 玩家
 chat.privateMessage.achievements.unlocked = 解锁的成就
 chat.privateMessage.achievements.unlockedFormat = {0,number,\#}/{1,number,\#}
 games.create = 创建游戏
-games.create.minRating = 最低限度
-games.create.maxRating = 最高限度
-games.showPasswordProtectedGames = 显示受密码保护的游戏
+games.create.minRating = 下限
+games.create.maxRating = 上限
+games.showPasswordProtectedGames = 显示私人游戏
 games.noGamesAvailable = 没有开放的游戏。你为何不创建一个？
 games.couldNotJoin = 游戏无法加入。请看下面的错误信息。
 game.create.connecting = 等待连接
@@ -178,7 +175,7 @@ game.ratingFormat.minOnly = >\={0,number,\#}
 game.ratingFormat.maxOnly = <\={0,number,\#}
 game.ratingFormat.minMax = {0,number,\#}  -  {1,number,\#}
 game.joinGameRatingConfirmation.title = 评级超出范围
-game.joinGameRatingConfirmation.text = 此游戏适用于评分在{0,number,\#}和{1,number,\#}之间的玩家，但您的当前评分为{2,number,\#}。\n \n您确定要加入？
+game.joinGameRatingConfirmation.text = 此游戏适用于评级在{0,number,\#}和{1,number,\#}之间的玩家，而您的当前评级为{2,number,\#}。\n \n您确定要加入？
 game.type = 类型
 game.mods = 修改
 game.players.format = {0,number,\#}/{1,number,\#}
@@ -194,6 +191,7 @@ game.join.passwordWrong = 密码错误
 game.start.couldNotStart = 游戏无法启动。请参阅下面的错误详细信息。
 game.full = 房间已满
 game.full.action = 单击以进入房间
+# Fuzzy
 game.mods.twoAndMore = {0}和{1,number,\#}更多
 game.gameStatus = 游戏状态
 game.gameStatus.playing = 游戏正在进行
@@ -389,16 +387,16 @@ achievements.mostRecent = 最新成就
 achievements.loading = 加载成就……
 achievements.unlocked = 解锁（{0,number,\#}）
 achievements.locked = 打开（{0,number,\#}）
-replayServer.listeningFailed = 重播服务器无法在端口{0,number,\#}上启动
+replayServer.listeningFailed = 无法启动录像服务器
 replayServer.retry = 重试
-replayServer.unreachable = 重播服务器无法访问，游戏无法录制。
+replayServer.unreachable = 无法访问录像服务器，游戏无法录制。
 corruptedMods.notification = MOD已损坏，无法加载：{0}。
 corruptedMods.show = 显示
-corruptedReplayFiles.notification = 磁盘上存在损坏的重播。为了您的方便，他们被转移到一个另外的目录。
+corruptedReplayFiles.notification = 磁盘上存在损坏的录像。为了您的便利，他们已被转移至其它目录。
 corruptedReplayFiles.show = 显示
 mapNotFound = 无法在服务器或此计算机上找到地图“{0}”。
-replayCouldNotBeStarted = 重播{0,number,\#}无法启动。请看下面的错误信息。
-liveReplayCouldNotBeStarted = 直播无法开始。请看下面的错误信息。
+replayCouldNotBeStarted = 录像{0,number,\#}无法启动。详见以下错误信息。
+liveReplayCouldNotBeStarted = 直播无法开始。详见以下错误信息。
 duration.seconds = {0,number,\#}s
 duration.minutesSeconds = {0,number,\#}min{1,number,\#}s
 duration.hourMinutes = {0,number,\#}h{1,number,\#}min
@@ -561,9 +559,9 @@ mod.filename = 文件名
 mod.version = 版本
 UIDNotExecuted = UID二进制文件无法执行。它可能已被删除，未找到或无法访问。
 replay.copyUrl = 复制录像网址
-game.showRatingChange = 显示评分变化
+game.showRatingChange = 显示评级变化
 game.notValid = 游戏未被评级
-game.notRatedYet = 无法更改评级
+game.notRatedYet = 尚且无法更改评级
 game.ended = 你喜欢“{0}”吗？ 让其他人知道！
 game.rate = 立即评分
 tiles.comparator.playersDescending = 按玩家人数降序排序
@@ -592,7 +590,7 @@ unitDatabase.rackover = 列表
 # What is it?
 unitDatabase.spooky = 图标
 # Fuzzy
-game.player.rating = 玩家的评分之一
+game.player.rating = 其中一位玩家的评级
 mapVault.ladder = 梯形图
 news.showLadderMaps = 显示梯形图
 ranked1v1.showMaps = 显示梯形图
@@ -661,3 +659,29 @@ game.couldNotJoin = 无法加入 ID ID 为"{0}"的游戏。
 discord.disallowJoins = 禁止玩家通过 Discord 加入
 # Fuzzy
 replay.couldNotOpen = 无法打开 ID"{0}"的录像。
+view.showSidePane = 显示细节
+view.hideSidePane = 隐藏细节
+menu.revealReplayFolder = 打开录像文件夹
+menu.revealGamePrefsFile = 打开游戏配置文件
+game.avgRating.format = {0,number,\#}
+game.mapGeneration.notification.title = 正在生成地图...
+game.mapGeneration.generateMap.title = 正在生成地图...(版本\: {0}, 种子\: {1})
+game.player.globalRating = 其中一位玩家的全球评级
+game.player.ladderRating = 其中一位玩家的天梯评级
+mapVault.upload.openRules = 显示规则
+game.ratingRange = 评级范围
+game.averageRating = 平均评级
+tiles.comparator.averageRatingDescending = 由高至低排列平均评级
+tiles.comparator.averageRatingAscending = 由低至高排列平均评级
+replay.dateTooltip = 开始日期
+replay.timeTooltip = 开始时间
+replay.durationTooltip = 实时
+replay.replayDurationTooltip = 录像长度
+replay.playerCountTooltip = 玩家
+replay.ratingTooltip = 平均评级
+replay.abortAfterMapNotFound = 放弃并显示更多信息
+vault.replays.onlyShowLastYear = 仅去年
+userInfo.ratingHistory.allTime = 全部
+userInfo.ratingHistory.lastYear = 去年
+userInfo.ratingHistory.lastMonth = 上个月
+games.create.enforceRating = 强制评级
