Update messages_cs.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -192,6 +192,7 @@ game.join.passwordWrong = Špatné heslo
 game.start.couldNotStart = Nepodařilo se spustit hru. Viz chybová zpráva níže.
 game.full = Hra je plná
 game.full.action = Klikni pro otevření hry
+# Fuzzy
 game.mods.twoAndMore = {0} a {1,number,\#} více
 game.gameStatus = Stav hry
 game.gameStatus.playing = Hraje
