Update messages_nl.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_nl.properties
+++ b/src/main/resources/i18n/messages_nl.properties
@@ -194,6 +194,7 @@ game.join.passwordWrong = Fout wachtwoord
 game.start.couldNotStart = Het spel kon niet gestart worden. Zie details fouten hieronder.
 game.full = Spel is vol
 game.full.action = Klik om spel te openen
+# Fuzzy
 game.mods.twoAndMore = {0} en {1,number,\#} meer
 game.gameStatus = Spel status
 game.gameStatus.playing = Spelen
