Update messages_fr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -203,6 +203,7 @@ game.start.couldNotStart = Impossible de démarrer la partie. Détails ci-dessou
 game.full = Partie pleine
 # I would need context for that one please
 game.full.action = Afficher la partie
+# Fuzzy
 game.mods.twoAndMore = {0} et {1,number,\#} autres
 game.gameStatus = État de la partie
 game.gameStatus.playing = En jeu
