Update messages_de.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -23,12 +23,9 @@ userMenu.showProfile = Profil anzeigen
 menu.feedback = Feedback
 menu.exit = Beenden
 menu.settings = Einstellungen
-# Fuzzy
-menu.revealMapFolder = Kartenerzeichnis öffnen
-# Fuzzy
-menu.revealLogFolder = Log-Verzeichnis öffnen
-# Fuzzy
-menu.revealModFolder = Mod-Verzeichnis öffnen
+menu.revealMapFolder = Kartenverzeichnis öffnen
+menu.revealLogFolder = Logverzeichnis öffnen
+menu.revealModFolder = Modverzeichnis öffnen
 main.community.news = Neuigkeiten
 main.chat = Chat
 main.play = Spielen
@@ -154,8 +151,7 @@ game.create.disconnected = Bitte verbinden
 game.create.map = Karte
 game.create.title = Titel (erforderlich)
 game.create.password = Passwort (optional)
-# Fuzzy
-game.create.randomMap = Zufällige Karte
+game.create.randomMap = Zufällige Karte auswählen
 game.create.defaultGameType = Standard
 game.create.rating = Erwünschtes Rating
 game.create.deselectAll = Alle abwählen
@@ -192,14 +188,17 @@ game.join.passwordWrong = Falsches Passwort
 game.start.couldNotStart = Das Spiel konnte nicht gestartet werden. Siehe Fehlermeldung unten.
 game.full = Spiel ist voll
 game.full.action = Klicke um das Spiel zu öffnen
+# Fuzzy
 game.mods.twoAndMore = {0} und {1,number,\#} weitere
 game.gameStatus = Spielstatus
 # What does this mean exactly? Game is in progress?
 game.gameStatus.playing = Spielt
 game.gameStatus.lobby = Wartet, bis das Spiel startet
 game.gameStatus.none = Keiner
+# You would probably not translate the English word replay to the German word Wiederholung but rather use the English word itself.
+# As with many things this word found its way into the German language as it is
 # Fuzzy
-game.id = Spiel UID
+game.id = Wiederholung ID
 game.time = Wann
 game.duration = Dauer
 game.gameType = Spieltyp
@@ -321,8 +320,7 @@ map.maxPlayers = Max. Spieler
 map.width = Breite
 map.height = Höhe
 # "Hinzugefügt" doesn't mean "Uploaded" but "Added".
-# Fuzzy
-map.uploadedDateTime = Hinzugefügt
+map.uploadedDateTime = Hochgeladen
 map.updatedDateTime = Aktualisiert
 mapPreview.name = Kartenname\: {0}
 mapPreview.size = {0,number,\#}km x {1,number,\#}km
@@ -418,7 +416,7 @@ yearsAgo = Vor {0,number,\#} Jahren
 settings.languages.restart.message = Du hast die Sprache geändert. Dies erfordert einen Neustart.
 # Message key and English translation say "Restart", German means "Close".
 # Fuzzy
-settings.languages.restart = Schließen
+settings.languages.restart = Neustart
 settings.languages.system = Auto
 settings.time.system = Auto
 settings.time.12 = 12h
@@ -433,7 +431,6 @@ settings.chat.previews = Vorschau
 # Fuzzy
 settings.chat.previewImages = Vorschaubiler für Internet-Links anzeigen
 settings.chat.colors = Farben
-# Fuzzy
 settings.chat.timeFormat = Zeitformat
 settings.chat.colorMode.default = Standard\: Benutze Standardfarben für alle Benutzer
 settings.chat.colorMode.custom = Benutzerdefiniert\: Erlaube benutzerdefinierte Farben für spezifische Benutzer
@@ -443,7 +440,7 @@ settings.chat.foes = Feinde
 settings.chat.hideFoe = Verstecke Nachrichten von Feinden
 settings.notifications = Benachrichtigungen
 # Fuzzy
-settings.notifications.enableNotifications = Aktiviere Benachrichtigungen
+settings.notifications.enableNotifications = Benachrichtigungen aktivieren
 settings.notifications.toastPosition = Position von Benachrichtigungen
 settings.notifications.toastScreen = Bildschirm
 settings.notifications.playSound = Spiele Sounds
@@ -457,7 +454,7 @@ settings.sounds.enable = Erlaube Sounds
 settings.fa.title = Forged Alliance Forever
 settings.fa.gameConfiguration = Spielkonfiguration
 # Fuzzy
-settings.fa.autoDownloadMaps = Lade benötigte Karten automatisch herunter
+settings.fa.autoDownloadMaps = Karten automatisch herunterladen
 settings.fa.gamePort = Spiel-Port
 # Fuzzy
 settings.fa.gameLocation = Spielverzeichnis
@@ -588,7 +585,7 @@ gameChosen.invalidPath = Ungültiger Pfad
 gameChosen.couldNotLocatedGame = Das gewählte Verzeichnis beinhaltet keine gültige Supreme Commander\: Forged Alliance Installation.
 userInfo.statistics.errorLoading = Konnte Statistiken nicht laden
 # Fuzzy
-settings.general.unitDatabase = Unit database
+settings.general.unitDatabase = Einheitendatenbank
 unitDatabase.rackover = Rackover
 unitDatabase.spooky = Spooky
 game.player.rating = Eins der Spieler-Ratings
@@ -669,13 +666,13 @@ discord.disallowJoins = Verbieten Spielern über Discord deinem Spiel beizutrete
 replay.couldNotOpen = Replay mit id ''{0}'' konnte nicht geöffnet werden.
 view.showSidePane = Zeige Details
 view.hideSidePane = Verstecke Details
-# Fuzzy
 menu.revealReplayFolder = Öffne Replay Ordner
+# English says it opens a file while the game client function actually opens the folder which contains the file
 # Fuzzy
 menu.revealGamePrefsFile = Öffne game.pref Ordner
 ranked1v1.queuePopTimer = Matche in {0,number,0}\:{1,number,00}
 # Fuzzy
-game.create.generatedMap = Generiere Karte
+game.create.generatedMap = Neue Karte generieren
 game.avgRating.format = {0,number,\#}
 game.mapGeneration.notification.title = Karte wird generiert...
 game.mapGeneration.notification.message = Bitte warten. (Version\: {0}, Seed\: {1})
@@ -794,16 +791,28 @@ startTab.selectTab = Wählen Sie den "Tab", mit dem Sie beginnen möchten\:
 startTab.message = Hier können Sie den "Tab" auswählen, mit dem der Client startet. Sie können dies später in den Einstellungen ändern, wenn Sie möchten.
 startTab.title = Wähle ein Tab zum Starten
 startTab.save = Speichern
+startTab.wantToConfigure = Wähle den Startreiter aus\:
+startTab.configure = Konfigurieren
 vault.replays.onlyShowLastYear = Nur ein Jahr alte
 game.create.spawnCount = Anzahl Spieler
 game.create.mapSize = Kartengröße
+game.generate = Generiere eine neue Karte
+game.generate.recreate = Karte mit folgendem Kartennamen neu generieren\:
+game.generate.generateNew = Neue Karte mit folgenden Optionen generieren\:
+game.generate.dialog = Kartengeneratoroptionen
+game.generate.nameCaution = Gebe den Namen einer Karte ein die du erneut generieren willst. Kartenname muss dem Muster neroxis_map_generator_(version)_(seed)_(options) entsprechen.
+game.generate.generatedName = Kartenname
 game.generate.generatedMapNew = NEU
 game.generate.waterSlider = Wasser
+game.generate.plateauSlider = Plateaus
 game.generate.mountainSlider = Berge
 game.generate.rampSlider = Rampen
 game.generate.random = Zufällig
 game.generate.none = Keine
 game.generate.lots = Viele
+mapGenerator.invalidName = Kartenname ist kein generierter Name
+mapGenerator.tooNewVersion = Dieser Client unterstützt diese Versions des Kartengenerators nicht.\nAktualisiere bitte den Client um diese Version zu verwenden.
+mapGenerator.tooOldVersion = Diese Version des Kartengenerators wird nicht länger unterstützt.
 mod.manager.uiMods = UI
 mod.manager.simMods = SIM
 mod.manager.deselectAll = Alle mods deaktivieren
@@ -812,6 +821,87 @@ mod.manager.simModsTooltip = SIM mods beeinflussen das Spiel für alle Spieler.
 mod.manager.uiModsTooltip = UI mods beeinflussen nur deine Sichtweise auf das Spiel.
 modVault.modManager = Verwalte aktivierte mods
 modVault.manageMods = Verwalte aktivierte mods
+theme.needsRestart.quit = Beenden
+vault.loading = Lade...
+vault.displayQuery = Zeige Abfrage
+vault.queryPrompt = Erstelle oben eine Abfrage or gebe direkt eine ein
+vault.searchError = Bei der Suche ist ein Fehler aufgetreten.
+vault.upload = Upload...
+replay.team = Team {0}
+replay.noTeam = Keine Teams
+search.perPage = Elemente pro Seite
+game.generateMap = neue Karte generieren
+game.generateMap.recreate = Generiere Karte erneut basierend auf folgendem Namen\:
+game.generateMap.generateNew = Generiere eine neue Karte mit folgenden Einstellungen\:
+game.generateMap.dialog = Kartengeneratoroptionen
+game.generateMap.nameCaution = Gebe den Namen einer Karte ein die du erneut generieren willst. Kartenname muss dem Muster neroxis_map_generator_(version)_(seed)_(options) entsprechen.
+game.generateMap.generatedName = Kartenname
+game.generateMap.waterSlider = Wasser
+game.generateMap.plateauSlider = Plateaus
+game.generateMap.mountainSlider = Berge
+game.generateMap.rampSlider = Rampen
 game.generateMap.random = Zufällig
 game.generateMap.none = Keine
 game.generateMap.lots = Viele
+settings.appearance.backgroundImage = Hintergrundbild
+settings.appearance.backgroundImage.description = Ein Hintergrundbild erhöht die Speichernutzung.
+settings.checkForPrerelease.description = Wenn nach Clientupdates geprüft wird, auch nach Vorveröffentlichungen suchen.
+settings.prereleaseFeedback.description = Trete unserem Discord Kanal bei um Feedback für Client Vorveröffentlichungen zu geben.
+settings.general.startTab.description = Tab das beim öffnen des Clients ausgewählt ist.
+settings.chat.maxMessages.description = Anzahl an Nachrichten die im Chatverlauf angezeigt werden. Mehr bedeutet eine höhere RAM-Nutzung.
+settings.chat.previewImages.description = Bildvorschau von URLs bei Mouseover.
+settings.chat.timeFormat.description = Anzeige des Zeitformats im Client.
+settings.chat.chatFormat.description = Wird nur bei neuen Nachrichten angewendet.
+settings.chat.hideFoe.description = Chatnachrichten von Spielern die als Feind markiert sind verstecken.
+settings.chat.autoJoinChannels = Kanälen automatisch beitreten
+settings.chat.autoJoinChannels.description = Weiteren Chatkanälen automatisch beitreten die nicht vom Server vorgegeben wurden.
+settings.notifications.enableNotifications.description = Alle visuellen Benachrichtigungen global ein- oder ausschalten.
+settings.notifications.position = Benachrichtigungsposition
+settings.sounds.enable.description = Gesamten Sound global ein- oder ausschalten.
+settings.fa.autoDownloadMaps.description = Fehlende Karten automatisch herunterladen.
+settings.fa.executableDecorator.description = Wie der Client die Spiel-exe ausführt. Lass dieses Feld leer, außer du weißt was du tust.
+settings.fa.executionDirectory.description = In welchem Ordner die Spiel-exe ausgeführt werden soll. Lass dieses Feld leer, außer du weißt was du tust.
+mapVault.install = Installieren
+chat.userContext.report = Spieler melden
+userInfo.ratingHistory.allTime = Gesamt
+userInfo.ratingHistory.lastYear = Letztes Jahr
+userInfo.ratingHistory.lastMonth = Letzer Monat
+vault.replays.copyReplayId = Replay ID kopieren
+vault.replays.copyReplayPath = Replaypfad kopieren
+discord.join = Trete dem FAF Discord bei
+game.reasonNotValid = Spiel wurde nicht gewertet. Grund\: {0}
+game.reasonNotValid.desync = Zu viele Desyncs
+game.reasonNotValid.wrongCondition = Falsche Siegbedingung
+game.reasonNotValid.fogOfWar = Kein Nebel des Krieges
+game.reasonNotValid.cheats = Cheats erlaubt
+game.reasonNotValid.unitRestriction = Einheiteinschränkungen
+game.reasonNotValid.unrankedMap = Ungewertete Karte
+game.reasonNotValid.short = Spiel zu kurz
+game.reasonNotValid.unrankedMod = Ungewerteter Mod
+game.reasonNotValid.coop = Koopspiel
+game.reasonNotValid.draw = einvernehmliches Unentschieden
+game.reasonNotValid.singlePlayer = Einzelspieler
+game.reasonNotValid.ffa = Jeder gegen Jeden (FFA)
+game.reasonNotValid.unevenTeams = ungleiche Teams
+game.reasonNotValid.unknown = unbekanntes Ergebnis
+game.reasonNotValid.teamsUnlocked = Teams entsperrt
+game.reasonNotValid.multipleTeams = mehr als 2 Teams
+game.reasonNotValid.ai = KI Spiel
+game.reasonNotValid.spawn = Keine festen Startpositionen
+exitWarning.title = Warnung
+exitWarning.message = Forged Alliance läuft noch, bist du sicher dass du den Client schließen willst?
+game.generateMap.tournament = Turnier
+settings.date.mdy = Monat/Tag/Jahr
+settings.date.dmy = Tag/Monat/Jahr
+settings.chat.dateFormat = Datumsformat
+settings.chat.dateFormat.description = In welchem Format das Datum im Chat angezeigt werden soll.
+chat.error.noHashTag = Der Channelname muss mit \# beginnen (Probiere \#{0})
+mod.idNumber = \#{0}
+label.copy = Kopieren
+settings.fa.allowReplayWhileInGame = Erlaube das Ansehen von Replays wenn du in-game bist
+settings.fa.allowReplayWhileInGame.description = Wenn du diese experimentelle Funktionalität aktivierst kannst du Replays anschauen, auch wenn du schon in der Lobby bist. Außer den Hacken zu setzten musst du dies auch in der game.prefs Datei aktivieren. Wenn du den unteren Knopf anklickst, wird das für dich erledigt. Falls der Knopf deaktiviert ist, wurde die Datei schon gepatcht. Dir sollte bewusst sein, dass das Starten von unterschiedlichen Spielversionen zu Fehlern führt.
+settings.fa.patchGamePrefsFailed = Fehler beim Patchen der game.prefs Datei.
+settings.fa.allowReplayWhileInGame.experimental = experimentell
+game.gameRunning = Spiel konnte nicht gestartet werden weil schon eine Instanz von Forged Alliance offen ist.
+replay.gameRunning = Replay konnte nicht gestartet werden weil schon eine Instanz von Forged Alliance offen ist. Du kannst die experimentelle Funktion um Replays anzusehen, während du in der Lobby bist, in den Optionen anschalten.
+gameUpdate.error.gameNotWritableAllowMultiOn = Das Spiel konnte nicht auf die benötigte Version gepatcht werden. Du hast versucht ein Replay oder ein Spiel mit einer anderen Version als du schon offen hast zu öffen.
