Update messages_iw.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_iw.properties
+++ b/src/main/resources/i18n/messages_iw.properties
@@ -192,6 +192,7 @@ game.join.passwordWrong = סיסמה שגויה
 game.start.couldNotStart = לא ניתן היה להתחיל את המשחק. צפה בהודעת השגיאה מטה.
 game.full = המשחק מלא
 game.full.action = לחץ כדי לפתוח את המשחק
+# Fuzzy
 game.mods.twoAndMore = {0} ו- {1,number,\#} נוספים
 game.gameStatus = מצב המשחק
 game.gameStatus.playing = מתבצעה
