Update messages_it.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -191,6 +191,7 @@ game.join.passwordWrong = Password non corretta
 game.start.couldNotStart = Impossibile avviare la partita. Vedi i dettagli d'errore sotto.
 game.full = Partita al completo
 game.full.action = Clicca per aprire la partita
+# Fuzzy
 game.mods.twoAndMore = {0} e{1,number,\#} più
 game.gameStatus = Stato partita
 game.gameStatus.playing = In gioco
