Update messages_pl.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_pl.properties
+++ b/src/main/resources/i18n/messages_pl.properties
@@ -211,6 +211,7 @@ game.join.passwordWrong = Błędne hasło
 game.start.couldNotStart = Gra nie została uruchomiona. Wiadomość błędu poniżej.
 game.full = Gra jest pełna
 game.full.action = Wciśnij aby otworzyć grę
+# Fuzzy
 game.mods.twoAndMore = {0} i {1,number,\#} więcej
 game.gameStatus = Status gry
 game.gameStatus.playing = W trakcie gry
@@ -666,3 +667,170 @@ game.missionName = Misja
 settings.appearance.backgoundImage = Obraz w tle
 settings.appearance.useDefaultImage = Użyj domyślnego obrazu
 settings.appearance.chooseImage = Wybierz obraz
+coop.unknownMission = Nieznana misja
+discord.disallowJoins = Nie zezwalaj graczom dołączać za pośrednictwem Discord
+replay.couldNotOpen = Powtórka o ID "{0}" nie mogła zostać otwarta
+view.showSidePane = Pokaż szczegóły
+view.hideSidePane = Ukryj szczegóły
+menu.revealReplayFolder = Pokaż folder z powtórkami
+menu.revealGamePrefsFile = Pokaż plik game.prefs
+ranked1v1.queuePopTimer = Dobór przeciwnika za {0,number,0}\:{1,number,00}
+game.create.generatedMap = Utwórz nową mapę
+game.avgRating.format = {0,number,\#}
+game.mapGeneration.notification.title = Generowanie mapy...
+game.mapGeneration.notification.message = Zaczekaj. (Version\: {0}, Seed\: {1})
+game.mapGeneration.failed.title = Tworzenie mapy zakończone niepowodzeniem
+game.mapGeneration.failed.message = Żądana mapa nie mogła zostać wygenerowana, proces tworzenia mapy nie został przerwany w oczekiwanym czasie. Kończenie procesu.
+game.mapGeneration.downloadGenerator.title = Pobieranie generatora map w wersji {0}
+game.mapGeneration.generateMap.title = Tworzenie mapy... (Version\: {0}, Seed\: {1})
+login.environment = Środowisko
+login.button.downloadUpdate = Pobierz najnowszą wersję
+login.button.downloadPreparing = Przygotowanie do pobierania
+login.button.downloadProgress = Pobrano w {0,number,0%}
+login.clientTooOldError = Obecna wersja klienta {0} jest zbyt stara by kontynuować. Serwer wymaga co najmniej wersji {1}. Dokonaj aktualizacji do nowszej wersji.
+login.ircServerHost = Host serwera IRC
+login.withEmailWarning = Zaloguj się przy użyciu nazwy użytkownika, a nie adresu email.
+vault.next = Następny
+vault.previous = Poprzedni
+settings.chat.addAutoJoinChannel = Dodaj kanał
+settings.chat.removeAutoJoinChannel = Usuń
+settings.chat.autoJoinChannelPrompt = Dołącz do kanału (\#channel_name)
+game.player.globalRating = Jeden z rankingów globalnych gracza
+# There is a direct translation of ladder but it will be unintuitive within this environment (ranking drabinkowy) - could leave commonly used english loanword "ladderowe" - commonly used in relation to e-sports
+# Fuzzy
+game.player.ladderRating = Jeden z rankingów ladderowych gracza
+userInfo.foe = Ten gracz jest twoim przeciwnikiem
+userInfo.friend = Ten gracz jest twoim sojusznikiem
+map.id = \#{0}
+mapGenerator.generationFailed = Podczas generowania mapy wystąpił błąd
+mapDir.changed.noneAscii = Wykryliśmy użycie w nazwie użytkownika znaków specjalnych i  przenieśliśmy twój folder magazynu do lokalizacji awaryjnej.
+mapDir.changed.unix = Wykryliśmy, że posiadasz system na bazie unix i przenieśliśmy twój folder magazynu do lokalizacji awaryjnej.
+mapDir.changed.oneDrive = Wykryliśmy, że używasz OneDrive dla swoich dokumentów i przenieśliśmy twój folder magazynu do lokalizacji awaryjnej.
+settings.use.secondaryVaultLocation = Użyj lokalizacji awaryjnej magazynu. Powinieneś jej użyć jeśli podczas pobierania mapy/modyfikacji występują błędy i gra nie jest w stanie odnaleźć mapy/modyfikacji
+help.title = Przegląd linków
+linksTecHelpDiscord = Pomoc techniczna na Discord
+linksTecHelpForum = Pomoc techniczna na forum
+# Even tho shown as not used the following messages are used
+linksRules = Reguły
+linksModerationReport = Formularz zgłoszeniowy dla Moderacji
+linksDiscord = Discord
+linksFacebook = Facebook
+linksYoutube = YouTube
+mapVault.upload.rules = Potwierdzam, iż przeczytałem reguły dotyczące wstawiania map.
+mapVault.upload.openRules = Pokaż reguły
+gameQuality.undefined = -
+chat.userContext.kickGame = Wyrzuć z gry...
+chat.userContext.kickLobby = Wyrzuć z poczekalni...
+moderator.ban.reason = powód bana
+moderator.ban.duration = długość bana
+moderator.ban.success = udało się wyrzucić i zbanować
+moderator.ban.user = Zbanuj użytkownika "{0}"\:
+main.tutorials = Samouczki
+tutorial.category = kategoria
+tutorial.tutorial = Samouczki
+tutorial.launch = Uruchom Samouczek
+tutorial.mapName = Nazwa mapy\: {0}
+tutorial.launchFailed = Uruchomienie Samouczka zakończone niepowodzeniem
+mapVault.installationFailed = Instalacja mapy zakończona niepowodzeniem dla mapy "{0}" z wiadomością "{1}"
+tutorial.loading = Wczytywanie samouczków
+tutorial.noneAvailable = Obecnie brak samouczków
+settings.giveFeedback = Otwórz
+game.averageRating = Średni Ranking
+tiles.comparator.averageRatingDescending = Sortuj na bazie Średniego Rankingu Malejąco
+tiles.comparator.averageRatingAscending = Sortuj na bazie Średniego Rankingu Rosnąco
+replay.dateTooltip = Data rozpoczęcia
+replay.timeTooltip = Czas rozpoczęcia
+replay.replayDurationTooltip = Długość powtórki
+replay.playerCountTooltip = Gracze
+replay.ratingTooltip = Średni ranking
+replay.qualityTooltip = Jakość
+mod.uploader.login = Wstawiający
+mapVault.upload.openValidation = Weryfikacja metadanych
+replay.ignoreMapNotFound = Ignoruj i rozpocznij powtórkę
+replay.abortAfterMapNotFound = Przerwij i pokaż więcej informacji
+map.unknown = nieznana
+vault.replays.ownReplays = Twoje powtórki
+modVault.details.uploader = Wstawiony przez\: {0}
+modVault.details.author = Autorstwa\: {0}
+gameSelect.select.invalidPath = Niewłaściwa ścieżka
+gamePath.select.error = Coś poszło nie tak podczas wyboru ścieżki
+startTab.save = Zapisz
+startTab.configure = Konfiguruj
+vault.replays.onlyShowLastYear = Jedynie z ostatniego roku
+game.create.spawnCount = Ilość pozycji startowych
+game.create.mapSize = Rozmiar mapy
+game.generate = Utwórz nową mapę
+game.generate.recreate = Przetwórz mapę z użyciem następującej nazwy\:
+game.generate.generateNew = Utwórz mapę z użyciem następujących opcji\: 
+game.generate.dialog = Opcje Tworzenia Mapy
+game.generate.generatedName = Nazwa Mapy
+game.generate.waterSlider = Woda
+game.generate.plateauSlider = Płaskowyże
+game.generate.mountainSlider = Góry
+game.generate.rampSlider = Stoki
+game.generate.random = Losowe
+game.generate.none = Brak
+game.generate.lots = Dużo
+mod.manager.uiMods = UI
+mod.manager.simMods = SIM
+mod.manager.deselectAll = Odznacz wszystkie mody
+mod.manager.reload = Wczytaj ponownie
+modVault.modManager = Zarządzaj aktywnymi modami
+modVault.manageMods = Zarządzaj aktywnymi modami
+vault.loading = Wczytywanie...
+vault.upload = Wstaw...
+replay.team = Drużyna {0}
+replay.noTeam = Brak Drużyn
+search.perPage = Elementów na Stronę
+game.generateMap = Utwórz nową mapę
+game.generateMap.generateNew = Utwórz nową mapę przy użyciu następujących opcji
+game.generateMap.dialog = Opcje Generatora Mapy
+game.generateMap.generatedName = Nazwa Mapy
+game.generateMap.waterSlider = Woda
+game.generateMap.plateauSlider = Płaskowyże
+game.generateMap.mountainSlider = Góry
+game.generateMap.rampSlider = Stoki
+game.generateMap.random = Losowe
+game.generateMap.none = Brak
+game.generateMap.lots = Dużo
+mapVault.install = Zainstaluj
+chat.userContext.report = Zgłoś gracza
+userInfo.ratingHistory.allTime = Wszystkie
+userInfo.ratingHistory.lastYear = Ostatni Rok
+userInfo.ratingHistory.lastMonth = Ostatni Miesiąc
+vault.replays.copyReplayId = Kopiuj Id Powtórki
+vault.replays.copyReplayPath = Kopiuj Ścieżkę Powtórki
+game.generateMap.less = Mniej
+game.generateMap.more = Więcej
+discord.join = Dołącz do FAF na Discord
+game.reasonNotValid.desync = Zbyt Wiele Desynchronizacji
+game.reasonNotValid.wrongCondition = Nieprawidłowe Warunki Zwycięstwa
+game.reasonNotValid.unitRestriction = Ograniczenia jednostek
+game.reasonNotValid.short = Gra Zbyt Krótka
+game.reasonNotValid.coop = Gra Kooperacyjna
+game.reasonNotValid.singlePlayer = Pojedynczy Gracz
+# Could be translated into Każdy na Każdego or KnK but will cause confusion and is less intuitive than org. abbreviation
+# Fuzzy
+game.reasonNotValid.ffa = FFA
+game.reasonNotValid.unevenTeams = Nierówne drużyny
+game.reasonNotValid.unknown = Nieznany Wynik
+game.reasonNotValid.teamsUnlocked = Drużyny Odblokowane
+game.reasonNotValid.multipleTeams = Wiele Drużyn
+game.reasonNotValid.ai = Miała AI
+game.reasonNotValid.civiliansRevealed = Cywile Ujawnieni
+game.reasonNotValid.difficulty = Niewłaściwy poziom trudności
+game.reasonNotValid.expansion = Ekspansja Wyłączona
+game.reasonNotValid.other = Inne
+exitWarning.title = Ostrzeżenie
+exitWarning.message = Forged Alliance jest wciąż uruchomiony, czy jesteś pewien, że chcesz wyłączyć klienta?
+game.generateMap.casual = Towarzyska
+game.generateMap.tournament = Turniej
+settings.date.system = Automatyczna
+settings.date.mdy = Miesiąc/Dzień/Rok
+settings.date.dmy = Dzień/Miesiąc/Rok
+settings.chat.dateFormat = Format Daty
+settings.chat.dateFormat.description = W jakim formacie powinna być wyświetlana data w czacie.
+chat.error.noHashTag = Nazwa Kanału musi rozpoczynać się od \# (Wypróbuj \#{0})
+game.gameStatus.hosting = Hostowanie
+mod.idNumber = \#{0}
+label.copy = kopiuj
