Update messages_es.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -197,6 +197,7 @@ game.join.passwordWrong = Contraseña incorrecta
 game.start.couldNotStart = La partida no se ha podido iniciar. Ver detalles a continuación.
 game.full = Partida llena
 game.full.action = Volver al juego
+# Fuzzy
 game.mods.twoAndMore = {0} y {1,number,\#} más
 game.gameStatus = Estado partida
 game.gameStatus.playing = Jugando
