Update messages_tr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_tr.properties
+++ b/src/main/resources/i18n/messages_tr.properties
@@ -191,6 +191,7 @@ game.join.passwordWrong = Şifre Hatalı
 game.start.couldNotStart = Oyun başlatılamadı.Aşağıda detaylara bak
 game.full = Oyun dolu
 game.full.action = Açmak için tıkla
+# Fuzzy
 game.mods.twoAndMore = {0} ve {1,number,\#} daha
 game.gameStatus = Oyun durumu
 game.gameStatus.playing = Oynuyor
