Add filter based search for vault

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -11,9 +11,12 @@ messageFromServer=Message from server
 more=More
 searchResult=Search result
 search=Search
+saveQuery=Save Query
 back=Back
 notAvailable=n/a
 reset=Reset
+logical=Adv. Search
+filter=Filter Search
 refresh=Refresh
 port=Port
 loading=Loading…
@@ -36,7 +39,9 @@ exitWarning.message=Forged Alliance is still running, are you sure you want to e
 main.news=News
 main.chat=Chat
 main.play=Play
-main.vault=Vault
+main.replay=Replays
+main.maps=Maps
+main.mods=Mods
 main.units=Units
 main.leaderboards=Leaderboards
 main.tournaments=Tournaments
@@ -240,6 +245,8 @@ game.duration=Duration
 game.gameType=Game type
 game.startTime=Start time
 game.endTime=End time
+game.date=Game Date
+game.onlyRanked=Only Ranked
 game.validity=Validity
 game.victoryCondition=Victory condition
 game.player.id=Player ID
@@ -256,6 +263,7 @@ game.map.version=Map version
 game.map.folderName=Map folder name
 game.map.isRanked=Map is ranked
 game.map.displayName=Map name
+game.map.author=Map Author
 game.options=Game Options
 game.optionKey=Option
 game.optionValue=Value
@@ -303,9 +311,9 @@ login.withEmailWarning=Please login with your username and not your email.
 vault.loading=Loading...
 vault.maps=Maps
 vault.mods=Mods
-vault.onlineReplays=Online Replays
+vault.onlineReplays=FAF Replays
 vault.localReplays=Local Replays
-vault.liveReplays=Live Replays
+vault.liveReplays=Live Games
 vault.replays.loading=Loading replays…
 vault.replays.newest=Most Recent
 vault.replays.highestRated=Highest Rated
@@ -322,6 +330,8 @@ vault.more=More…
 vault.next=Next
 vault.previous=Previous
 vault.currentPage=Page: {0,number,#}
+vault.savedQueries=Favorites
+vault.saveQuery=Save Query
 modVault.newestMods=Most recent
 modVault.details.uploader=Uploaded by: {0}
 modVault.details.author=Authored by: {0}
@@ -395,11 +405,15 @@ map.versionId=Map version ID
 map.versionFormat=v{0}
 map.folderName=Folder name
 map.ranked=Ranked
+map.onlyRanked=Only Ranked
 map.reviews=Reviews
+map.reviewScore=Review Score
 map.updated=Updated
 map.maxPlayers=Max. players
-map.width=Width (in px)
-map.height=Height (in px)
+map.width=Width
+map.height=Height
+map.widthPixels=Width (in px)
+map.heightPixels=Height (in px)
 map.uploadedDateTime=Uploaded
 map.updatedDateTime=Updated
 map.noDescriptionAvailable=The author did not provide a description
@@ -646,9 +660,16 @@ query.in=one of
 query.notIn=none of
 query.and=and
 query.or=or
+query.moreFilters=More Filters
 query.addCriteria=Add criteria
 query.removeCriteria=Remove criteria
 query.valueHint=Value
+query.textFilter={0}: {1}
+query.categoryFilter={0}: {1}
+query.rangeFilter={0}: {1} to {2}
+query.dateRangeFilter={0}: from {1} to {2}
+query.afterDate=After
+query.beforeDate=Before
 review.send=Send review
 review.starsTip.one=Didn't like it at all
 review.starsTip.two=Didn't like it
@@ -675,10 +696,12 @@ mod.updatedDateTime=Updated
 mod.id=ID
 mod.idNumber=#{0}
 mod.uid=UID
-mod.type=Typ
+mod.type=Type
 mod.ranked=Ranked
+mod.onlyRanked=Only Ranked
 mod.filename=Filename
 mod.version=Version
+mod.reviewScore=Review Score
 UIDNotExecuted=UID binary could not be executed. It might have been removed, not found or inaccessible.
 replay.copyUrl=Copy replay URL
 replay.dateTooltip=Start date
@@ -729,14 +752,19 @@ tiles.comparator.nameDescending=Sort by Names Descending
 tiles.comparator.nameAscending=Sort by Names Ascending
 search.sort.ascending=ascending
 search.sort.descending=descending
+search.lowValue=Minimum
+search.highValue=Maximum
+search.afterDate=Start Date
+search.beforeDate=End Date
 query.contains=contains
 search.sort=Sort by
+search.removeQuery=Remove Query
 search.perPage=Items per Page
 vault.mods.searchError=Mods could not be loaded
 vault.maps.searchError=Maps could not be loaded
 noDateAvailable=No date available
 map.created=Created:
-modType.ui=Ui mod
+modType.ui=UI mod
 modType.sim=Sim mod
 menu.connect=Connecting
 gameSelect.select.invalidPath=Invalid path
@@ -753,6 +781,8 @@ unitDatabase.rackover=Rackover
 unitDatabase.spooky=Spooky
 game.player.globalRating=One of the player's global ratings
 game.player.ladderRating=One of the player's ladder ratings
+game.globalRating=Global Rating
+game.ladderRating=Ladder Rating
 mapVault.ladder=Ladder maps
 news.showLadderMaps=Show ladder maps
 ranked1v1.showMaps=Show ladder maps
