--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -855,6 +855,7 @@ theme.needsRestart.message=Changing the theme to ''{0}'' might require a restart
 theme.needsRestart.quit=Quit
 discord.join=Join FAF on Discord
 chat.filter.countryPrompt=Country code
+chat.userColor=Color
 games.create.enforceRating=Enforce rating
 label.copy=copy
 gameUpdate.error.gameNotWritableAllowMultiOn=The game could not be patched to the required version for this game launch. You are trying to watch a replay or open a game of a conflicting version to the one you have already opened.
