--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -857,6 +857,7 @@ discord.join=Join FAF on Discord
 chat.filter.countryPrompt=Country code
 chat.userColor=Color
 games.create.enforceRating=Enforce rating
+review.currentVersion=Current Version
 review.version=Version {0}
 review.date={0} on {1}
 label.copy=copy
