Capitalize Search Terms

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -250,11 +250,11 @@ game.onlyRanked=Only Ranked
 game.validity=Validity
 game.victoryCondition=Victory condition
 game.player.id=Player ID
-game.player.username=Player name
-game.player.faction=Player faction
-game.player.team=Player team
-game.player.startSpot=Player start position
-game.player.score=Player score
+game.player.username=Player Name
+game.player.faction=Player Faction
+game.player.team=Player Team
+game.player.startSpot=Player Start Position
+game.player.score=Player Score
 game.host.id=Host ID
 game.host.username=Host username
 game.map.height=Map height (in px)
@@ -262,7 +262,7 @@ game.map.width=Map width (in px)
 game.map.version=Map version
 game.map.folderName=Map folder name
 game.map.isRanked=Map is ranked
-game.map.displayName=Map name
+game.map.displayName=Map Name
 game.map.author=Map Author
 game.options=Game Options
 game.optionKey=Option
