Disable queue buttons when someone is in a game

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -94,6 +94,8 @@ teammatchmaking.notification.gameAlreadyRunning.message=You cannot join a queue 
 teammatchmaking.playerTitle=Playing matchmaking as:
 teammatchmaking.partyTitle=Your party:
 teammatchmaking.queueTitle=Join one or more queues when you are ready:
+teammatchmaking.queueTitle.inGame=Can't join queues while you are in a game
+teammatchmaking.queueTitle.memberInGame=Can't join queues while someone is in a game
 teammatchmaking.queueTitle.inParty=The party leader will join the queues
 teammatchmaking.queue.ladder1v1.fullName=Ranked 1v1
 teammatchmaking.queue.ladder1v1.shortName=1v1
